log/combned.metagpu5.3281025.err
  File "main.py", line 295
    exp_dir = f'{exp_name}'')
                            ^
SyntaxError: EOL while scanning string literal
